tests/rustdoc-ui/doc-cfg-2.stderr
warning: unexpected `cfg` condition name: `foo`
  --> $DIR/doc-cfg-2.rs:4:11
   |
LL | #[doc(cfg(foo), cfg(bar))]
   |           ^^^
   |
   = help: expected names are: `FALSE` and `test` and 33 more
   = help: to expect this configuration use `--check-cfg=cfg(foo)`
   = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg.html> for more information about checking conditional configuration
   = note: `#[warn(unexpected_cfgs)]` on by default

warning: unexpected `cfg` condition name: `bar`
  --> $DIR/doc-cfg-2.rs:4:21
   |
LL | #[doc(cfg(foo), cfg(bar))]
   |                     ^^^
   |
   = help: to expect this configuration use `--check-cfg=cfg(bar)`
   = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg.html> for more information about checking conditional configuration

error: only `hide` or `show` are allowed in `#[doc(auto_cfg(...))]`
  --> $DIR/doc-cfg-2.rs:7:16
   |
LL | #[doc(auto_cfg(42))]
   |                ^^
   |
note: the lint level is defined here
  --> $DIR/doc-cfg-2.rs:1:9
   |
LL | #![deny(invalid_doc_attributes)]
   |         ^^^^^^^^^^^^^^^^^^^^^^

error: `#![doc(auto_cfg(hide(...)))]` only accepts identifiers or `values(...)`
  --> $DIR/doc-cfg-2.rs:8:21
   |
LL | #[doc(auto_cfg(hide(true)))]
   |                     ^^^^

error: `#![doc(auto_cfg(hide(...)))]` only accepts identifiers or `values(...)`
  --> $DIR/doc-cfg-2.rs:9:21
   |
LL | #[doc(auto_cfg(hide(42)))]
   |                     ^^

error: `#![doc(auto_cfg(hide(...)))]` only accepts identifiers or `values(...)`
  --> $DIR/doc-cfg-2.rs:10:21
   |
LL | #[doc(auto_cfg(hide("a")))]
   |                     ^^^

error: expected boolean for `#[doc(auto_cfg = ...)]`
  --> $DIR/doc-cfg-2.rs:11:18
   |
LL | #[doc(auto_cfg = 42)]
   |                  ^^

error: expected boolean for `#[doc(auto_cfg = ...)]`
  --> $DIR/doc-cfg-2.rs:12:18
   |
LL | #[doc(auto_cfg = "a")]
   |                  ^^^

error: `#![doc(auto_cfg(hide(...)))]` only accepts identifiers or `values(...)`
  --> $DIR/doc-cfg-2.rs:15:21
   |
LL | #[doc(auto_cfg(hide(feature = "windows")))]
   |                     ^^^^^^^^^^^^^^^^^^^

error: aborting due to 7 previous errors; 2 warnings emitted

